src/objects/Dairy_Cattle_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>How_identify_dairy_calving_problems__c</fullName>
        <description>How do you tell that your dairy animal has problems during calving?</description>
        <inlineHelpText>How do you tell that your dairy animal has problems during calving?</inlineHelpText>
        <label>How identify dairy calving problems</label>
        <picklist>
            <picklistValues>
                <fullName>1Fails to calve 2hrs after water bladder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Calf feet appearing upside down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Appearance of behind legs first</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. The tail of the calf showing first</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Twisted neck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. One leg showing first.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Calf head appearing first</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. I am not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_know_that_dairy_cow_about_to_calve__c</fullName>
        <description>How do you know that your dairy cow is about to calve?</description>
        <inlineHelpText>How do you know that your dairy cow is about to calve?</inlineHelpText>
        <label>How know that dairy cow about to calve</label>
        <picklist>
            <picklistValues>
                <fullName>1. Udder becomes large and firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Cow may isolate itself from others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. The cow becomes restless.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Mucus/blood may begin flow from vulva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Cows back arches &amp; may raise its tail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Through use of records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. The abdomen increases in size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Sometimes it refuses to eat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Presence of milk once animal is milked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_manage_your_milking_dairy_cow__c</fullName>
        <description>How do you feed and manage YOUR milking dairy cow?</description>
        <inlineHelpText>How do you feed and manage YOUR milking dairy cow?</inlineHelpText>
        <label>How manage your milking dairy cow</label>
        <picklist>
            <picklistValues>
                <fullName>1 Feed on good quality pastures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Supplement with concentrates daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Provide clean water all the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Mix urea in dry grass before feeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Add Super glow/DI in animal feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Ensure good hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_often_HH_member_gone_to_hospital__c</fullName>
        <inlineHelpText>In the past 12 months (2 growing seasons), how many times has anyone in the household gone to a hospital or health clinic, or to see a doctor, nurse, or VHT (village health team)?</inlineHelpText>
        <label>How often HH member gone to hospital</label>
        <picklist>
            <picklistValues>
                <fullName>1. Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. 1 time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. 2-3 times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. 4-6 times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. 7 or more times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_spray_to_control_ticks__c</fullName>
        <description>How often do you spray to control ticks and other parasites?</description>
        <inlineHelpText>How often do you spray to control ticks and other parasites?</inlineHelpText>
        <label>How often spray to control ticks</label>
        <picklist>
            <picklistValues>
                <fullName>1. Spray one a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Spray every after 2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Spray every after 3-4 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Take more than 1 month to spray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Do not spray at all</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_the_Milk_is_Marketed_or_Sold__c</fullName>
        <label>How the Milk is Marketed or Sold</label>
        <picklist>
            <picklistValues>
                <fullName>1. Individually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Group bulking/cooperative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Supply my hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Do not sell/market any milk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_to_Identify_Arthritis__c</fullName>
        <label>How to Identify Arthritis</label>
        <picklist>
            <picklistValues>
                <fullName>1. Swelling of leg joints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Loss of condition or weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Refusal to eat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Fever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Watery and dull eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Clear fluids from the nose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Yellowish diarrhoea at times bloody.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Reduction in milk production</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_to_Identify_Brucellosis__c</fullName>
        <label>How to Identify Brucellosis</label>
        <picklist>
            <picklistValues>
                <fullName>1. Abortion at 6 months and above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Weak born calves that normally die off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Usually large swelling on the knee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Temporary/permanent infertility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Wounds in mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Wounds on skin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Wounds on the feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_to_Identify_Navel_Infections__c</fullName>
        <label>How to Identify Navel Infections</label>
        <picklist>
            <picklistValues>
                <fullName>1.Swelling navel with pus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Presence of fever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Body weakness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Watery and dull eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Clear fluids from the nose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Reduction in milk production</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_to_Identify_Pneumonia__c</fullName>
        <label>How to Identify Pneumonia</label>
        <picklist>
            <picklistValues>
                <fullName>1.Presence of soft,repetitive coughing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Greenish/yellowish rebuilds in dung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Refusal to eat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Loss of condition or weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Fever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Watery and dull eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Clear fluids from the nose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_to_Identify_Salmoneliosis__c</fullName>
        <label>How to Identify Salmoneliosis</label>
        <picklist>
            <picklistValues>
                <fullName>1.Loss of appetite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Presence of fever,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. At first constipation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Yellowish diarrhoea at times bloody.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Reduction in milk production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Tendency to hide behind other animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Dullness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Presence of soft, repetitive coughing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Increase in breathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Watery and dull eyes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_to_tell_cow_is_pregnant_after_mating__c</fullName>
        <description>How do you tell whether your cow is pregnant after insemination or mating with a bull?</description>
        <inlineHelpText>How do you tell whether your cow is pregnant after insemination or mating with a bull?</inlineHelpText>
        <label>How to tell cow is pregnant after mating</label>
        <picklist>
            <picklistValues>
                <fullName>1. If it does not come back on heat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Milk reduces at 4-5months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Milk taste salty beyond 6 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Examination by veterinary doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. General animal body weakness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Animal becomes specific in eating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 If it does not show other sign of heat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_to_tell_that_animal_is_on_heat__c</fullName>
        <label>How to tell that animal is on heat</label>
        <picklist>
            <picklistValues>
                <fullName>1. Cow does not move when mounted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Cow raises it tail most of the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Cow moves from place to place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Cow makes a lot of noise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Cow refuses to eat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Clear mucus flows from cow&apos;s vulva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Bulls follow,smell/mount the same cow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Cow&apos;s milk production reduces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Cow on heat mounting others like bull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Blood appear at end of heat period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Raising/twisting tail continuously</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_training_changed_dairy_enterprise__c</fullName>
        <description>How has the training changed your dairy farming enterprise?</description>
        <inlineHelpText>How has the training changed your dairy farming enterprise?</inlineHelpText>
        <label>How training changed dairy enterprise</label>
        <picklist>
            <picklistValues>
                <fullName>1. Increased production and productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Increased marketing competitiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Strengthened market linkages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Value addition practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. No change due to local animal breeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. General improvement on cleanliness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. 1 able to measure cow feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Able to make animal feeds on farm</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Identify_Anthrax__c</fullName>
        <label>How to Identify Anthrax</label>
        <picklist>
            <picklistValues>
                <fullName>1Black unclotted blood from all openings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.High fever followed by death in 2days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Wounds in the mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Excess salivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Yellowish, smelling diarrheoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Identify_Coccidiosis__c</fullName>
        <label>How to Identify Coccidiosis</label>
        <picklist>
            <picklistValues>
                <fullName>1. Presence of diarrhoea with blood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Refusal to eat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Fever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Watery and dull eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Clear fluids from the nose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Loss of condition or weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Wounds in the mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Wounds on the skin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Wounds in the foot</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Identify_East_Coast_Fever__c</fullName>
        <label>How to Identify East Coast Fever</label>
        <picklist>
            <picklistValues>
                <fullName>1.Swelling of the lymph nodes/neck area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. High temperature (up to 41 °C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Difficult breathing and coughing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Nasal discharge (running nose)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Salivation(constant saliva from mouth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Watery eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Yellowish diarrhoea at times bloody.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Diarrhoea containing blood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Wounds in the mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Wounds on Legs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Identify_Foot_and_Mouth_Disease__c</fullName>
        <label>How to Identify Foot and Mouth Disease</label>
        <picklist>
            <picklistValues>
                <fullName>1. Wounds in mouth and feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Excessive salivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Clotted milk sometimes with blood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Yellowish diarrhoea at times bloody.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Identify_Lumpy_Skin__c</fullName>
        <label>How to Identify Lumpy Skin</label>
        <picklist>
            <picklistValues>
                <fullName>1.Skin covered with round,firm rashes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Loss of body condition/weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Reduced milk yield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Coughing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Wounds in mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Excessive salivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Watery eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Identify_Mastitis__c</fullName>
        <label>How to Identify Mastitis</label>
        <picklist>
            <picklistValues>
                <fullName>1.Swelling, redness and heat of udder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Udder becoming firm/hard &amp; painful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Clotted milk sometimes with blood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Refusal to eat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Loss of condition or weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Fever/high temperatures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Watery and dull eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Clear fluids from the nose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Yellowish diarrhoea at times bloody.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Important_to_know_how_to_detect_heat__c</fullName>
        <description>Do you think it is important to know how to detect heat in your diary animals?</description>
        <inlineHelpText>Do you think it is important to know how to detect heat in your diary animals?</inlineHelpText>
        <label>Important to know how to detect heat?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Parasites_treated_in_last_2_yrs__c</fullName>
        <label>Internal Parasites treated in last 2 yrs</label>
        <picklist>
            <picklistValues>
                <fullName>1. Lung worms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Roundworms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Tape worms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Liver flukes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. I am not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 None of the above</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Member_of_a_Community_Farmer_Group__c</fullName>
        <label>Is Member of a Community Farmer Group?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ivermectin_Quantity_Given__c</fullName>
        <label>Ivermectin Quantity Given</label>
        <picklist>
            <picklistValues>
                <fullName>1. Less than 1ml to calves upto 50Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Give 1ml to calves upto 50Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Give 2ml to heifers upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Give 25ml to heifers upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Give 40ml to heifers upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Give 3ml to calves upto 150kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Give 3-4ml to adults above 150Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Give 5 ml to heifer upto 250kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Give 7ml to heifer upto 300kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Give 10ml to heifer upto 150kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Give 15ml to adults above 250Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Keeps_records_about_dairy_farming__c</fullName>
        <label>Keeps records about dairy farming</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keeps_records_on_milk_production_on_farm__c</fullName>
        <description>Do you keep any records specifically on milk production on your farm?</description>
        <inlineHelpText>Do you keep any records specifically on milk production on your farm?</inlineHelpText>
        <label>Keeps records on milk production on farm</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Know_how_to_manage_cow_that_has_calved__c</fullName>
        <description>Do you know how to handle or manage a cow that has just calved or given birth?</description>
        <inlineHelpText>Do you know how to handle or manage a cow that has just calved or given birth?</inlineHelpText>
        <label>Know how to manage cow that has calved</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Know_how_to_managed_newly_born_calf__c</fullName>
        <label>Know how to managed newly born calf</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_any_general_symptoms_of_sick_cow__c</fullName>
        <description>Do you know any of the general symptoms of a sick cow/bull or worm infection?</description>
        <inlineHelpText>Do you know any of the general symptoms of a sick cow/bull or worm infection?</inlineHelpText>
        <label>Knows any general symptoms of sick cow</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_reason_why_cow_may_not_conceive__c</fullName>
        <label>Knows reason why cow may not conceive</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_recommended_dewormers_to_use__c</fullName>
        <label>Knows recommended dewormers to use</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_recommended_deworming_interval__c</fullName>
        <label>Knows recommended deworming interval</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_recommended_deworming_tool__c</fullName>
        <description>Do you know the right/recommended equipment/tool to use for deworming your cattle?</description>
        <inlineHelpText>Do you know the right/recommended equipment/tool to use for deworming your cattle?</inlineHelpText>
        <label>Knows recommended deworming tool</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_recommended_mgt_milking_dairy_cow__c</fullName>
        <description>Do you know the recommended ways of feeding and managing a milking dairy cow?</description>
        <inlineHelpText>Do you know the recommended ways of feeding and managing a milking dairy cow?</inlineHelpText>
        <label>Knows recommended mgt milking dairy cow</label>
        <picklist>
            <picklistValues>
                <fullName>1 Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_recommended_spray_pump_for_cattle__c</fullName>
        <label>Knows recommended spray pump for cattle</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knows_recommended_spraying_time_interval__c</fullName>
        <label>Knows recommended spraying time interval</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>